# python-project-setup

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  readme.md  ruff.toml
.github/actions/setup-action/: action.yml
.github/actions/setup-action.yml/: action.yml
.github/workflows/: build.yml  code-checks.yml  publish.yml  pull-request.yml
package_name_here/: __init__.py
scripts/: build.py  clean_up_intermediate_folders.py  make_file.py  mypy-proxy.py  pre_install.py  publish.py  test.py  utils.py
src/: main.py  pandas-thing.py
src/python_project_standard/: main.py
src/python_project_standard/subfolder/: __init__.py  pandas_thing.py
test/: test_main.py
test/subfolder/: test_pandas_thing.py
tests/: test_main.py
tests/subfolder/: test_pandas_thing.py
